--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<!--meta name="HandheldFriendly" content="True">
 	<meta name="MobileOptimized" content="320">
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 	<meta name="format-detection" content="telephone=no">
 	<meta name="format-detection" content="address=no">
 	<meta name="mobile-web-app-capable" content="yes">
@@ -38,10 +38,279 @@
 <body>
 	<div id="page">
 		<header id="header">
-			<h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam, maiores, possimus! Recusandae amet illo rem eligendi delectus, tenetur eveniet, suscipit a repudiandae nulla blanditiis illum ex fugit nesciunt quaerat tempora?</h1>
+			<div class="inner">
+				<div class="logo"><img src="build/images/logo.png" alt="Дорога Здоров'я - здорове шкільне харчування"></div>
+				<div class="info-holder">
+					<ul class="langs-holder">
+						<li class="active"><a href="#">ua</a></li>
+						<li><a href="#">ru</a></li>
+					</ul>
+					<div class="btn-large">
+						<a href="#">Вхід для батьків</a>
+					</div>
+					<span class="separator-vertical"></span>
+					<ul class="phones-holder">
+						<li>
+							<a href="tel:+380449999999">+38 (044) 999 9999</a>
+						</li>
+						<li>
+							<a href="tel:+380449999999">+38 (044) 999 9999</a>
+						</li>
+						<li>
+							<a href="tel:+380449999999">+38 (044) 999 9999</a>
+						</li>
+					</ul>
+					<ul class="call-center-holder">
+						<li>
+							<h3>Центр Підтримки</h3>
+						</li>
+						<li>
+							<span>пн-пт: 9:00 - 18:00</span>
+						</li>
+						<li>
+							<a href="#">Зворотній зв’язок</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+			<div id="menu-holder">
+				<div class="inner">
+					<nav class="menu">
+						<ul>
+							<li class="active"><a href="#">Головна</a></li>
+							<li><a href="#">Про компанію</a></li>
+							<li><a href="#">Наш проект</a></li>
+							<li><a href="#">Продукти</a></li>
+							<li><a href="#">Виробники</a></li>
+							<li><a href="#">Питання-Відповідь</a></li>
+							<li><a href="#">Контакти</a></li>
+						</ul>
+					</nav>
+				</div>
+			</div>
 		</header>
+		<main id="content">
+			<section class="outer intro-holder">
+				<figure class="slide">
+					<img src="build/images/slider/kids.jpg" alt="happy kids">
+				</figure>
+				<div class="inner">
+					<div class="entitled">
+						<h1>Дорога здоров’я</h1>
+						<h2>Повноцінне і здорове шкільне харчування</h2>
+						<div class="btn-more">
+							<a href="#">
+								<span class="text">дізнайтеся більше</span>
+								<span class="long-arrow"></span>
+							</a>
+						</div>
+					</div>
+				</div>
+			</section>
+			<section class="outer project-holder">
+				<div class="inner">
+					<h2>Що ми пропонуємо</h2>
+					<span class="separator-horizontal"></span>
+					<p>Правильне і здорове харчування школярів - це не таке просте питання, яке може здатися на перший погляд. Ця проблема вимагає втручання самих різних фахівців, однак найбільше це питання турбує батьків. Саме тому батьки з'ясовують у дітей, що вони їли в шкільній їдальні. Наш проект вирішує ці завдання, ґрунтуючись на досвіді і стандартах шкільного харчування в Європі, сучасних технологіях і суворому контролі продуктів, що поставляються, води і соків. Наші постачальники дитячого живлення не застосовують у виробництві заборонені консерванти, спирт, каву, штучні ароматичні речовини і барвники.</p>
+					<div class="benefits-holder">
+						<ul>
+							<li>
+								<span class="hr-apple hr-large"></span>
+								<span class="separator-horizontal"></span>
+								<p>Ми пропонуємо широкий асортимент якісних і здорових продуктів харчування для ваших дітей, що включають в себе натуральні соки, фрукти, воду, молочні продукти і дитячі кондитерські вироби</p>
+							</li>
+							<li>
+								<span class="hr-cards hr-large"></span>
+								<span class="separator-horizontal"></span>
+								<p>Для придбання продукції в наших вендінгових автоматах використовуватимуться тільки браслети або особисті картки. Батьки перестануть хвилюватися і переживати, гадаючи, як і на що витратила гроші їх дитина. Завдяки СМС розсилці батьки завжди знатимуть, що і коли їх дитина отримала у вендінговому автоматі</p>
+							</li>
+							<li>
+								<span class="hr-save-money hr-large"></span>
+								<span class="separator-horizontal"></span>
+								<p>Споживач купує продукцію безпосередньо від виробника, при цьому виключається участь посередників. Це помітно здешевлює ціну кінцевого продукту, що обов’язково припаде до душі кожному покупцеві</p>
+							</li>
+						</ul>
+					</div>
+					<div id="watch-movie" data-lang="ua">
+						<a href="#">
+							<span class="hr-play hr-large"></span>
+							<span class="text">переглянути відео-презентацію</span>
+						</a>
+					</div>
+				</div>
+			</section>
+			<section class="outer suppliers-holder">
+				<div class="inner">
+					<h2>Виробники</h2>
+					<span class="separator-horizontal"></span>
+					<ul class="suppliers">
+						<li>
+							<figure>
+								<a href="#">
+									<img src="build/images/suppliers/biscuit.png" alt="biscuit">
+								</a>
+							</figure>
+						</li>
+						<li>
+							<figure>
+								<a href="#">
+									<img src="build/images/suppliers/econia.png" alt="econia">
+								</a>
+							</figure>
+						</li>
+						<li>
+							<figure>
+								<a href="#">
+									<img src="build/images/suppliers/frutalina.png" alt="frutalina">
+								</a>
+							</figure>
+						</li>
+						<li>
+							<figure>
+								<a href="#">
+									<img src="build/images/suppliers/juice.png" alt="juice">
+								</a>
+							</figure>
+						</li>
+						<li>
+							<figure>
+								<a href="#">
+									<img src="build/images/suppliers/tekmar.png" alt="tekmar">
+								</a>
+							</figure>
+						</li>
+					</ul>
+				</div>
+			</section>
+			<section class="outer questions-holder">
+				<div class="inner">
+					<h2>Питання які часто задають</h2>
+					<span class="separator-horizontal"></span>
+					<ul class="questions">
+						<li>
+							<span class="hr-use-hand hr-small"></span>
+							<span class="separator-horizontal"></span>
+							<p>У школі, дитина для отримання продуктів, просто прикладає браслет або картку до апарату і з браслета / картки списується необхідна сума, а автомат видає дитині продукти харчування</p>
+							<a href="#">докладніше<span class="long-arrow"></span></a>
+						</li>
+						<li>
+							<span class="hr-get-card hr-small"></span>
+							<span class="separator-horizontal"></span>
+							<p>У школі, дитина для отримання продуктів, просто прикладає браслет або картку до апарату і з браслета / картки списується необхідна сума, а автомат видає дитині продукти харчування</p>
+							<a href="#">докладніше<span class="long-arrow"></span></a>
+						</li>
+						<li>
+							<span class="hr-add-money hr-small"></span>
+							<span class="separator-horizontal"></span>
+							<p>У школі, дитина для отримання продуктів, просто прикладає браслет або картку до апарату і з браслета / картки списується необхідна сума, а автомат видає дитині продукти харчування</p>
+							<a href="#">докладніше<span class="long-arrow"></span></a>
+						</li>
+					</ul>
+					<div class="btn-small">
+						<a href="#">Усі питання</a>
+					</div>
+				</div>
+			</section>
+			<div id="movie-holder">
+				<div class="inner">
+					<iframe src='' allowfullscreen></iframe>
+				</div>
+			</div>
+		</main>
+	</div>
+	<div id="footer">
+		<section class="pre-footer">
+			<div class="inner">
+				<div class="part contacts">
+					<h3>Контакти</h3>
+					<span class="separator-horizontal"></span>
+					<ul>
+						<li>
+							<span class="item"><span class="hr-pin"></span>03002, м. Київ, вул. Ярославів Вал 13/2</span>
+						</li>
+						<li>
+							<span class="item"><span class="hr-shedule"></span>пн.-пт. 9:00 - 18:00</span>
+						</li>
+						<li>
+							<span class="item"><span class="hr-phone"></span>+38 (044) 999 9999</span>
+						</li>
+						<li>
+							<span class="item"><span class="hr-email"></span>info@kdz.com.ua</span>
+						</li>
+					</ul>
+				</div>
+				<div class="part navigation">
+					<h3>Всі розділи</h3>
+					<span class="separator-horizontal"></span>
+					<div class="list-holder">
+						<ul>
+							<li><a href="#">Головна</a></li>
+							<li><a href="#">Наш проект</a></li>
+							<li><a href="#">Про компанію</a></li>
+							<li><a href="#">Виробники</a></li>
+							<li><a href="#">Асортимент продуктів</a></li>
+							<li><a href="#">Галерея</a></li>
+							<li><a href="#">Новини</a></li>
+							<li><a href="#">Як отримати картку?</a></li>
+							<li><a href="#">Акції та пропозиції</a></li>
+							<li><a href="#">Як користуватись автоматом?</a></li>
+							<li><a href="#">Як стати клієнтом?</a></li>
+							<li><a href="#">Як поповнити картку?</a></li>
+							<li><a href="#">Стати партнером</a></li>
+							<li><a href="#">Питання-відповідь</a></li>
+						</ul>
+					</div>
+				</div>
+				<div class="part entrance">
+					<h3>Вхід для батьків</h3>
+					<span class="separator-horizontal"></span>
+					<form action="#" method="POST" id="entrance-form">
+						<div class="field-area">
+							<input type="tel" name="user[phone]" value="" placeholder="+38 (044) 999 9999" id="entrance-user-phone" data-inputmask="'mask': '+38 (999) 999 9999'">
+							<label for="entrance-user-phone"><span class="hr-phone"></span></label>
+						</div>
+						<div class="field-area">
+							<input type="password" name="user[password]" value="" placeholder="ваш пароль" id="entrance-user-password">
+							<label for="entrance-user-password"><span class="hr-lock"></span></label>
+						</div>
+						<button type="submit">
+							<span>Увійти</span>
+						</button>
+					</form>
+				</div>
+			</div>
+		</section>
+		<footer>
+			<div class="inner">
+				<div class="logo">
+					<a href="#"><img src="build/images/logo-white.png" alt="Дорога Здоров'я"></a>
+				</div>
+				<ul class="social-holder">
+					<li>
+						<a href="#" class="hr-facebook hr-small"></a>
+					</li>
+					<li>
+						<a href="#" class="hr-vk hr-small"></a>
+					</li>
+					<li>
+						<a href="#" class="hr-twitter hr-small"></a>
+					</li>
+					<li>
+						<a href="#" class="hr-gplus hr-small"></a>
+					</li>
+				</ul>
+				<small class="copyright">(с) 2015 ТОВ "Дорога Здоров'я". Всі права захищено</small>
+				<div class="developers">
+					<a href="#"><img src="build/images/cheers.png" alt="Developed by CHEERS! Unlimited web-agency"></a>
+				</div>
+			</div>
+		</footer>
 	</div>
 	<script src="node_modules/jquery/dist/jquery.min.js"></script>
+	<script src="node_modules/jquery.inputmask/dist/inputmask/inputmask.js"></script>
+	<script src="node_modules/jquery.inputmask/dist/inputmask/jquery.inputmask.js"></script>
+
+	<script src="build/js/controllers/movieController.js"></script>
 	<script src="build/js/app/home.js"></script>
 </body>
 </html>
