add headlines to questions(home page)

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 				</figure>
 				<div class="inner">
 					<div class="entitled">
-						<h1>Дорога здоров’я</h1>
+						<h1>Дорога Здоров’я</h1>
 						<h2>Повноцінне і здорове шкільне харчування</h2>
 						<div class="btn-more">
 							<a href="#">
@@ -190,18 +190,21 @@
 						<li>
 							<span class="hr-use-hand hr-small"></span>
 							<span class="separator-horizontal"></span>
+							<h3>Як користуватися вендінговим автоматом</h3>
 							<p>У школі, дитина для отримання продуктів, просто прикладає браслет або картку до апарату і з браслета / картки списується необхідна сума, а автомат видає дитині продукти харчування</p>
 							<a href="#">докладніше<span class="long-arrow"></span></a>
 						</li>
 						<li>
 							<span class="hr-get-card hr-small"></span>
 							<span class="separator-horizontal"></span>
+							<h3>Як отримати картку</h3>
 							<p>У школі, дитина для отримання продуктів, просто прикладає браслет або картку до апарату і з браслета / картки списується необхідна сума, а автомат видає дитині продукти харчування</p>
 							<a href="#">докладніше<span class="long-arrow"></span></a>
 						</li>
 						<li>
 							<span class="hr-add-money hr-small"></span>
 							<span class="separator-horizontal"></span>
+							<h3>Як поповнювати картку</h3>
 							<p>У школі, дитина для отримання продуктів, просто прикладає браслет або картку до апарату і з браслета / картки списується необхідна сума, а автомат видає дитині продукти харчування</p>
 							<a href="#">докладніше<span class="long-arrow"></span></a>
 						</li>
