--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
 					<span class="separator-vertical"></span>
 					<ul class="phones-holder">
 						<li>
-							<a href="tel:+380449999999">+38 (044) 999 9999</a>
+							<a href="tel:+380449999999">+38 (066) 539 3939</a>
 						</li>
 						<li>
-							<a href="tel:+380449999999">+38 (044) 999 9999</a>
+							<a href="tel:+380449999999">+38 (068) 539 3939</a>
 						</li>
 						<li>
-							<a href="tel:+380449999999">+38 (044) 999 9999</a>
+							<a href="tel:+380449999999">+38 (073) 539 3939</a>
 						</li>
 					</ul>
 					<ul class="call-center-holder">
@@ -66,9 +66,6 @@
 						</li>
 						<li>
 							<span>пн-пт: 9:00 - 18:00</span>
-						</li>
-						<li>
-							<a href="#">Зворотній зв’язок</a>
 						</li>
 					</ul>
 				</div>
@@ -96,7 +93,7 @@
 				</figure>
 				<div class="inner">
 					<div class="entitled">
-						<h1>Дорога Здоров’я</h1>
+						<h1>Дорога Здоровя</h1>
 						<h2>Повноцінне і здорове шкільне харчування</h2>
 						<div class="btn-more">
 							<a href="#">
@@ -146,37 +143,27 @@
 					<ul class="suppliers">
 						<li>
 							<figure>
-								<a href="#">
-									<img src="build/images/suppliers/biscuit.png" alt="biscuit">
-								</a>
+								<img src="build/images/suppliers/biscuit.png" alt="biscuit">
 							</figure>
 						</li>
 						<li>
 							<figure>
-								<a href="#">
-									<img src="build/images/suppliers/econia.png" alt="econia">
-								</a>
+								<img src="build/images/suppliers/econia.png" alt="econia">
 							</figure>
 						</li>
 						<li>
 							<figure>
-								<a href="#">
-									<img src="build/images/suppliers/frutalina.png" alt="frutalina">
-								</a>
+								<img src="build/images/suppliers/frutalina.png" alt="frutalina">
 							</figure>
 						</li>
 						<li>
 							<figure>
-								<a href="#">
-									<img src="build/images/suppliers/juice.png" alt="juice">
-								</a>
+								<img src="build/images/suppliers/juice.png" alt="juice">
 							</figure>
 						</li>
 						<li>
 							<figure>
-								<a href="#">
-									<img src="build/images/suppliers/tekmar.png" alt="tekmar">
-								</a>
+								<img src="build/images/suppliers/tekmar.png" alt="tekmar">
 							</figure>
 						</li>
 					</ul>
@@ -304,11 +291,15 @@
 				</ul>
 				<small class="copyright">(с) 2015 ТОВ "Дорога Здоров'я". Всі права захищено</small>
 				<div class="developers">
+					<p>Розроблено веб-агенством</p>
 					<a href="#"><img src="build/images/cheers.png" alt="Developed by CHEERS! Unlimited web-agency"></a>
 				</div>
 			</div>
 		</footer>
 	</div>
+	
+	
+
 	<script src="node_modules/jquery/dist/jquery.min.js"></script>
 	<script src="node_modules/jquery.inputmask/dist/inputmask/inputmask.js"></script>
 	<script src="node_modules/jquery.inputmask/dist/inputmask/jquery.inputmask.js"></script>
