--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 	<div id="page">
 		<header id="header">
 			<div class="inner">
-				<div class="logo"><img src="build/images/logo.png" alt="Дорога Здоров'я - здорове шкільне харчування"></div>
+				<div class="logo"><a href="#"><img src="build/images/logo.png" alt="Дорога Здоров'я - здорове шкільне харчування"></a></div>
 				<div class="info-holder">
 					<ul class="langs-holder">
 						<li class="active"><a href="#">ua</a></li>
@@ -296,15 +296,22 @@
 				</div>
 			</div>
 		</footer>
-	</div>
-	
-	
-
+	</div>	
 	<script src="node_modules/jquery/dist/jquery.min.js"></script>
 	<script src="node_modules/jquery.inputmask/dist/inputmask/inputmask.js"></script>
 	<script src="node_modules/jquery.inputmask/dist/inputmask/jquery.inputmask.js"></script>
 
 	<script src="build/js/controllers/movieController.js"></script>
 	<script src="build/js/app/home.js"></script>
+	<script>
+		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+		ga('create', 'UA-68268180-1', 'auto');
+		ga('send', 'pageview');
+
+	</script>
 </body>
 </html>
