--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 							</li>
 						</ul>
 					</div>
-					<div id="watch-movie" data-lang="ua">
+					<div id="watch-movie">
 						<a href="#">
 							<span class="hr-play hr-large"></span>
 							<span class="text">переглянути відео-презентацію</span>
@@ -197,9 +197,7 @@
 				</div>
 			</section>
 			<div id="movie-holder">
-				<div class="inner">
-					<iframe src='' allowfullscreen></iframe>
-				</div>
+				<div class="inner"></div>
 			</div>
 		</main>
 	</div>
