new text om main page and several new icons

--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
 					<span class="separator-vertical"></span>
 					<ul class="phones-holder">
 						<li>
-							<a href="tel:+380449999999">+38 (066) 539 3939</a>
+							<a href="tel:+380449999999"><span class="hr-mtc hr-small"></span>+38 (066) 539 3939</a>
 						</li>
 						<li>
-							<a href="tel:+380449999999">+38 (068) 539 3939</a>
+							<a href="tel:+380449999999"><span class="hr-kstar hr-small"></span>+38 (068) 539 3939</a>
 						</li>
 						<li>
-							<a href="tel:+380449999999">+38 (073) 539 3939</a>
+							<a href="tel:+380449999999"><span class="hr-life hr-small"></span>+38 (063) 539 3939</a>
 						</li>
 					</ul>
 					<ul class="call-center-holder">
@@ -106,25 +106,27 @@
 			</section>
 			<section class="outer project-holder">
 				<div class="inner">
-					<h2>Що ми пропонуємо</h2>
+					<h2>Європейська система здорового шкільного харчування</h2>
 					<span class="separator-horizontal"></span>
-					<p>Правильне і здорове харчування школярів - це не таке просте питання, яке може здатися на перший погляд. Ця проблема вимагає втручання самих різних фахівців, однак найбільше це питання турбує батьків. Саме тому батьки з'ясовують у дітей, що вони їли в шкільній їдальні. Наш проект вирішує ці завдання, ґрунтуючись на досвіді і стандартах шкільного харчування в Європі, сучасних технологіях і суворому контролі продуктів, що поставляються, води і соків. Наші постачальники дитячого живлення не застосовують у виробництві заборонені консерванти, спирт, каву, штучні ароматичні речовини і барвники.</p>
+					<p>Чим харчується Ваша дитина? Ви можете проконтролювати використання кишенькових грошей? Європейська система здорового шкільного харчування – це не лише повноцінний обід, але й декілька перекусів корисними та свіжими продуктами, яких в шкільних буфетах найчастіше просто немає. Ми вирішуємо ці проблеми та пропонуємо якісні та сертифіковані продукти харчування для перекусу, які Ваша дитина може придбати у торгівельному автоматі за допомогою безконтактної картки або браслета.</p>
+					<p>Повністю контролюйте щоденний раціон дитини за допомогою інформаційних повідомлень на мобільний телефон, встановлення ліміту на щоденні витрати та можливості встановити заборону на споживання певного виду продукції, якщо у вашої дитини є обмеження по здоров'ю.</p>
+					<p>Приєднуйтесь до європейської системи дитячого харчування вже сьогодні</p>
 					<div class="benefits-holder">
 						<ul>
 							<li>
 								<span class="hr-apple hr-large"></span>
 								<span class="separator-horizontal"></span>
-								<p>Ми пропонуємо широкий асортимент якісних і здорових продуктів харчування для ваших дітей, що включають в себе натуральні соки, фрукти, воду, молочні продукти і дитячі кондитерські вироби</p>
+								<p>Натуральні фруктові соки, кондитерські вироби, вода, свіжі фрукти – саме так буде виглядати перекус Вашої дитини у школі щоденно.</p>
 							</li>
 							<li>
 								<span class="hr-cards hr-large"></span>
 								<span class="separator-horizontal"></span>
-								<p>Для придбання продукції в наших вендінгових автоматах використовуватимуться тільки браслети або особисті картки. Батьки перестануть хвилюватися і переживати, гадаючи, як і на що витратила гроші їх дитина. Завдяки СМС розсилці батьки завжди знатимуть, що і коли їх дитина отримала у вендінговому автоматі</p>
+								<p>Не потрібно давати кишенькові гроші, які дитина може витратити на фаст-фуд чи солодкі газовані напої. Поповнюйте браслет або картку і повністю контролюйте раціон своєї дитини.</p>
 							</li>
 							<li>
 								<span class="hr-save-money hr-large"></span>
 								<span class="separator-horizontal"></span>
-								<p>Споживач купує продукцію безпосередньо від виробника, при цьому виключається участь посередників. Це помітно здешевлює ціну кінцевого продукту, що обов’язково припаде до душі кожному покупцеві</p>
+								<p>Вся продукція надходить безпосередньо із заводів сертифікованих виробників продуктів дитячого харчування, що дозволяє залишати мінімальною вартість продукції</p>
 							</li>
 						</ul>
 					</div>
@@ -166,28 +168,28 @@
 			</section>
 			<section class="outer questions-holder">
 				<div class="inner">
-					<h2>Питання які часто задають</h2>
+					<h2>Три кроки до здорового харчування Вашої дитини</h2>
 					<span class="separator-horizontal"></span>
 					<ul class="questions">
 						<li>
-							<span class="hr-use-hand hr-small"></span>
-							<span class="separator-horizontal"></span>
-							<h3>Як користуватися вендінговим автоматом</h3>
-							<p>У школі, дитина для отримання продуктів, просто прикладає браслет або картку до апарату і з браслета / картки списується необхідна сума, а автомат видає дитині продукти харчування</p>
-							<a href="#">докладніше<span class="long-arrow"></span></a>
-						</li>
-						<li>
 							<span class="hr-get-card hr-small"></span>
 							<span class="separator-horizontal"></span>
-							<h3>Як отримати картку</h3>
-							<p>У школі, дитина для отримання продуктів, просто прикладає браслет або картку до апарату і з браслета / картки списується необхідна сума, а автомат видає дитині продукти харчування</p>
+							<h3>Як отримати картку або браслет</h3>
+							<p>Отримайте та заповніть анкету у школі, де навчається Ваша дитина. Здайте заповнену анкету представнику у школі та отримайте картку, або браслет.</p>
 							<a href="#">докладніше<span class="long-arrow"></span></a>
 						</li>
 						<li>
 							<span class="hr-add-money hr-small"></span>
 							<span class="separator-horizontal"></span>
-							<h3>Як поповнювати картку</h3>
-							<p>У школі, дитина для отримання продуктів, просто прикладає браслет або картку до апарату і з браслета / картки списується необхідна сума, а автомат видає дитині продукти харчування</p>
+							<h3>Як поповнювати картку або браслет</h3>
+							<p>Поповнити картку або браслет можна у будь-якому відділенні банку або у відділенні Укрпошти.</p>
+							<a href="#">докладніше<span class="long-arrow"></span></a>
+						</li>
+						<li>
+							<span class="hr-use-hand hr-small"></span>
+							<span class="separator-horizontal"></span>
+							<h3>Як користуватись вендінговим автоматом</h3>
+							<p>Достатньо обрати номер потрібного продукта на клавіатурі автомата, прикласти картку або браслет для зняття коштів, та отримати обраний продукт у вікні видачі автомата.</p>
 							<a href="#">докладніше<span class="long-arrow"></span></a>
 						</li>
 					</ul>
@@ -197,6 +199,7 @@
 				</div>
 			</section>
 			<div id="movie-holder">
+				<span class="close hr-close"></span>
 				<div class="inner"></div>
 			</div>
 		</main>
