--- a/index.html
+++ b/index.html
@@ -74,13 +74,11 @@
 				<div class="inner">
 					<nav class="menu">
 						<ul>
-							<li class="active"><a href="#">Головна</a></li>
-							<li><a href="#">Про компанію</a></li>
-							<li><a href="#">Наш проект</a></li>
-							<li><a href="#">Продукти</a></li>
-							<li><a href="#">Виробники</a></li>
-							<li><a href="#">Питання-Відповідь</a></li>
-							<li><a href="#">Контакти</a></li>
+							<li class="active"><a href="index.html">Головна</a></li>
+							<li><a href="about.html">Про компанію</a></li>
+							<li><a href="project.html">Наш проект</a></li>
+							<li><a href="suppliers.html">Виробники</a></li>
+							<li><a href="contacts.html">Контакти</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -145,22 +143,62 @@
 					<ul class="suppliers">
 						<li>
 							<figure>
-								<img src="build/images/suppliers/biscuit.png" alt="biscuit">
+								<a href="#"><img src="build/images/suppliers/biskvit-shokolad.png" alt="ХАРКІВСЬКА БІСКВІТНА ФАБРИКА"></a>
 							</figure>
 						</li>
 						<li>
 							<figure>
-								<img src="build/images/suppliers/econia.png" alt="econia">
+								<a href="#"><img src="build/images/suppliers/ekoniya.png" alt="ЕКОНІЯ"></a>
 							</figure>
 						</li>
 						<li>
 							<figure>
-								<img src="build/images/suppliers/frutalina.png" alt="frutalina">
+								<a href="#"><img src="build/images/suppliers/ginger.png" alt="Джиджер"></a>
 							</figure>
 						</li>
 						<li>
 							<figure>
-								<img src="build/images/suppliers/juice.png" alt="juice">
+								<a href="#"><img src="build/images/suppliers/nash-sik.png" alt="Наш сік"></a>
+							</figure>
+						</li>
+						<li>
+							<figure>
+								<a href="#"><img src="build/images/suppliers/jaffa.png" alt="Jaffa juice"></a>
+							</figure>
+						</li>
+						<li>
+							<figure>
+								<a href="#"><img src="build/images/suppliers/kvartet.png" alt="Квартет"></a>
+							</figure>
+						</li>
+						<li>
+							<figure>
+								<a href="#"><img src="build/images/suppliers/ramonka.png" alt="Рамонка"></a>
+							</figure>
+						</li>
+						<li>
+							<figure>
+								<a href="#"><img src="build/images/suppliers/sergio.png" alt="Sergio"></a>
+							</figure>
+						</li>
+						<li>
+							<figure>
+								<a href="#"><img src="build/images/suppliers/sladkiy-myr.png" alt="Солодкий світ"></a>
+							</figure>
+						</li>
+						<li>
+							<figure>
+								<a href="#"><img src="build/images/suppliers/teen-team.png" alt="Teen Team"></a>
+							</figure>
+						</li>
+						<li>
+							<figure>
+								<a href="#"><img src="build/images/suppliers/vitmark.png" alt="Vitmark"></a>
+							</figure>
+						</li>
+						<li>
+							<figure>
+								<a href="#"><img src="build/images/suppliers/cherkasy-hlib.png" alt="ЧеркасиХліб"></a>
 							</figure>
 						</li>
 					</ul>
@@ -198,107 +236,104 @@
 					</div>
 				</div>
 			</section>
+			<section class="pre-footer">
+				<div class="inner">
+					<div class="part contacts">
+						<h3>Контакти</h3>
+						<span class="separator-horizontal"></span>
+						<ul>
+							<li>
+								<span class="item"><span class="hr-pin"></span>03002, м. Київ, вул. Ярославів Вал 13/2</span>
+							</li>
+							<li>
+								<span class="item"><span class="hr-shedule"></span>пн.-пт. 9:00 - 18:00</span>
+							</li>
+							<li>
+								<span class="item"><span class="hr-phone"></span>+38 (044) 999 9999</span>
+							</li>
+							<li>
+								<span class="item"><span class="hr-email"></span>info@kdz.com.ua</span>
+							</li>
+						</ul>
+					</div>
+					<div class="part navigation">
+						<h3>Всі розділи</h3>
+						<span class="separator-horizontal"></span>
+						<div class="list-holder">
+							<ul>
+								<li><a href="#">Головна</a></li>
+								<li><a href="#">Наш проект</a></li>
+								<li><a href="#">Про компанію</a></li>
+								<li><a href="#">Виробники</a></li>
+								<li><a href="#">Асортимент продуктів</a></li>
+								<li><a href="#">Галерея</a></li>
+								<li><a href="#">Новини</a></li>
+								<li><a href="#">Як отримати картку?</a></li>
+								<li><a href="#">Акції та пропозиції</a></li>
+								<li><a href="#">Як користуватись автоматом?</a></li>
+								<li><a href="#">Як стати клієнтом?</a></li>
+								<li><a href="#">Як поповнити картку?</a></li>
+								<li><a href="#">Стати партнером</a></li>
+								<li><a href="#">Питання-відповідь</a></li>
+							</ul>
+						</div>
+					</div>
+					<div class="part entrance">
+						<h3>Вхід для батьків</h3>
+						<span class="separator-horizontal"></span>
+						<form action="#" method="POST" id="entrance-form">
+							<div class="field-area">
+								<input type="tel" name="user[phone]" value="" placeholder="+38 (044) 999 9999" id="entrance-user-phone" data-inputmask="'mask': '+38 (999) 999 9999'">
+								<label for="entrance-user-phone"><span class="hr-phone"></span></label>
+							</div>
+							<div class="field-area">
+								<input type="password" name="user[password]" value="" placeholder="ваш пароль" id="entrance-user-password">
+								<label for="entrance-user-password"><span class="hr-lock"></span></label>
+							</div>
+							<button type="submit">
+								<span>Увійти</span>
+							</button>
+						</form>
+					</div>
+				</div>
+			</section>
 			<div id="movie-holder">
 				<span class="close hr-close"></span>
 				<div class="inner"></div>
 			</div>
 		</main>
 	</div>
-	<div id="footer">
-		<section class="pre-footer">
-			<div class="inner">
-				<div class="part contacts">
-					<h3>Контакти</h3>
-					<span class="separator-horizontal"></span>
-					<ul>
-						<li>
-							<span class="item"><span class="hr-pin"></span>03002, м. Київ, вул. Ярославів Вал 13/2</span>
-						</li>
-						<li>
-							<span class="item"><span class="hr-shedule"></span>пн.-пт. 9:00 - 18:00</span>
-						</li>
-						<li>
-							<span class="item"><span class="hr-phone"></span>+38 (044) 999 9999</span>
-						</li>
-						<li>
-							<span class="item"><span class="hr-email"></span>info@kdz.com.ua</span>
-						</li>
-					</ul>
-				</div>
-				<div class="part navigation">
-					<h3>Всі розділи</h3>
-					<span class="separator-horizontal"></span>
-					<div class="list-holder">
-						<ul>
-							<li><a href="#">Головна</a></li>
-							<li><a href="#">Наш проект</a></li>
-							<li><a href="#">Про компанію</a></li>
-							<li><a href="#">Виробники</a></li>
-							<li><a href="#">Асортимент продуктів</a></li>
-							<li><a href="#">Галерея</a></li>
-							<li><a href="#">Новини</a></li>
-							<li><a href="#">Як отримати картку?</a></li>
-							<li><a href="#">Акції та пропозиції</a></li>
-							<li><a href="#">Як користуватись автоматом?</a></li>
-							<li><a href="#">Як стати клієнтом?</a></li>
-							<li><a href="#">Як поповнити картку?</a></li>
-							<li><a href="#">Стати партнером</a></li>
-							<li><a href="#">Питання-відповідь</a></li>
-						</ul>
-					</div>
-				</div>
-				<div class="part entrance">
-					<h3>Вхід для батьків</h3>
-					<span class="separator-horizontal"></span>
-					<form action="#" method="POST" id="entrance-form">
-						<div class="field-area">
-							<input type="tel" name="user[phone]" value="" placeholder="+38 (044) 999 9999" id="entrance-user-phone" data-inputmask="'mask': '+38 (999) 999 9999'">
-							<label for="entrance-user-phone"><span class="hr-phone"></span></label>
-						</div>
-						<div class="field-area">
-							<input type="password" name="user[password]" value="" placeholder="ваш пароль" id="entrance-user-password">
-							<label for="entrance-user-password"><span class="hr-lock"></span></label>
-						</div>
-						<button type="submit">
-							<span>Увійти</span>
-						</button>
-					</form>
-				</div>
+	<footer id="footer">
+		<div class="inner">
+			<div class="logo">
+				<a href="#"><img src="build/images/logo-white.png" alt="Дорога Здоров'я"></a>
 			</div>
-		</section>
-		<footer>
-			<div class="inner">
-				<div class="logo">
-					<a href="#"><img src="build/images/logo-white.png" alt="Дорога Здоров'я"></a>
-				</div>
-				<ul class="social-holder">
-					<li>
-						<a href="#" class="hr-facebook hr-small"></a>
-					</li>
-					<li>
-						<a href="#" class="hr-vk hr-small"></a>
-					</li>
-					<li>
-						<a href="#" class="hr-twitter hr-small"></a>
-					</li>
-					<li>
-						<a href="#" class="hr-gplus hr-small"></a>
-					</li>
-				</ul>
-				<small class="copyright">(с) 2015 ТОВ "Дорога Здоров'я". Всі права захищено</small>
-				<div class="developers">
-					<p>Розроблено веб-агенством</p>
-					<a href="#"><img src="build/images/cheers.png" alt="Developed by CHEERS! Unlimited web-agency"></a>
-				</div>
+			<ul class="social-holder">
+				<li>
+					<a href="#" class="hr-facebook hr-small"></a>
+				</li>
+				<li>
+					<a href="#" class="hr-vk hr-small"></a>
+				</li>
+				<li>
+					<a href="#" class="hr-twitter hr-small"></a>
+				</li>
+				<li>
+					<a href="#" class="hr-gplus hr-small"></a>
+				</li>
+			</ul>
+			<small class="copyright">(с) 2015 ТОВ "Дорога Здоров'я". Всі права захищено</small>
+			<div class="developers">
+				<p>Розроблено веб-агенством</p>
+				<a href="#"><img src="build/images/cheers.png" alt="Developed by CHEERS! Unlimited web-agency"></a>
 			</div>
-		</footer>
-	</div>	
-	<script src="node_modules/jquery/dist/jquery.min.js"></script>
-	<script src="node_modules/jquery.inputmask/dist/inputmask/inputmask.js"></script>
-	<script src="node_modules/jquery.inputmask/dist/inputmask/jquery.inputmask.js"></script>
-
-	<script src="build/js/controllers/movieController.js"></script>
-	<script src="build/js/app/home.js"></script>
+		</div>
+	</footer>
+	<script src="jspm_packages/system.js"></script>
+	<script src="jspm.config.js"></script>
+	<script>
+		System.import("assets/js/app/home");
+	</script>
 	<script>
 		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
