small fixes + suppliers

--- a/about.html
+++ b/about.html
@@ -88,7 +88,7 @@
 			<div class="outer inside">
 				<aside id="navigation-holder">
 					<ul>
-						<li class="active"><a href="#">О компании</a></li>
+						<li class="active"><a href="#">Про компанію</a></li>
 					</ul>
 				</aside>
 				<section id="content-info-holder">
