--- a/index.html
+++ b/index.html
@@ -214,21 +214,21 @@
 							<span class="separator-horizontal"></span>
 							<h3>Як отримати картку або браслет</h3>
 							<p>Отримайте та заповніть анкету у школі, де навчається Ваша дитина. Здайте заповнену анкету представнику у школі та отримайте картку, або браслет.</p>
-							<a href="#">докладніше<span class="long-arrow"></span></a>
+							<a href="project-get-card.html">докладніше<span class="long-arrow"></span></a>
 						</li>
 						<li>
 							<span class="hr-add-money hr-small"></span>
 							<span class="separator-horizontal"></span>
 							<h3>Як поповнювати картку або браслет</h3>
 							<p>Поповнити картку або браслет можна у будь-якому відділенні банку або у відділенні Укрпошти.</p>
-							<a href="#">докладніше<span class="long-arrow"></span></a>
+							<a href="project-card-refill.html">докладніше<span class="long-arrow"></span></a>
 						</li>
 						<li>
 							<span class="hr-use-hand hr-small"></span>
 							<span class="separator-horizontal"></span>
 							<h3>Як користуватись вендінговим автоматом</h3>
 							<p>Достатньо обрати номер потрібного продукта на клавіатурі автомата, прикласти картку або браслет для зняття коштів, та отримати обраний продукт у вікні видачі автомата.</p>
-							<a href="#">докладніше<span class="long-arrow"></span></a>
+							<a href="project-how-to-use-vending-machine.html">докладніше<span class="long-arrow"></span></a>
 						</li>
 					</ul>
 					<div class="btn-small">
