--- a/project-how-to-use-vending-machine.html
+++ b/project-how-to-use-vending-machine.html
@@ -89,7 +89,7 @@
 				<aside id="navigation-holder">
 					<ul>
 						<li><a href="project.html">Наш проект</a></li>
-						<li><a href="project-advantage.html">Наші переваги</a></li>
+						<li><a href="project-advantage.html">Переваги проекту</a></li>
 						<li><a href="project-vending-machines.html">Наші вендінгові автомати</a></li>
 						<li><a href="project-get-card.html">Як отримати картку або браслет</a></li>
 						<li><a href="project-card-refill.html">Як поповнити картку або браслет</a></li>
