--- a/suppliers-vitmark.html
+++ b/suppliers-vitmark.html
@@ -33,7 +33,7 @@
 	<link rel="icon" type="image/png" href="assets/images/favicons/96x96.png">
 	<link rel="icon" type="image/png" href="assets/images/favicons/160x160.png">
 	<link rel="icon" type="image/png" href="assets/images/favicons/192x192.png"-->
-	<link rel="stylesheet" href="build/css/project.bundle.min.css">
+	<link rel="stylesheet" href="build/css/suppliers.bundle.min.css">
 </head>
 <body>
 	<div id="page">
@@ -76,8 +76,8 @@
 						<ul>
 							<li><a href="index.html">Головна</a></li>
 							<li><a href="about.html">Про компанію</a></li>
-							<li class="active"><a href="project.html">Наш проект</a></li>
-							<li><a href="suppliers.html">Виробники</a></li>
+							<li><a href="project.html">Наш проект</a></li>
+							<li class="active"><a href="suppliers.html">Виробники</a></li>
 							<li><a href="contacts.html">Контакти</a></li>
 						</ul>
 					</nav>
@@ -88,30 +88,27 @@
 			<div class="outer inside">
 				<aside id="navigation-holder">
 					<ul>
-						<li><a href="project.html">Наш проект</a></li>
-						<li><a href="project-advantage.html">Переваги проекту</a></li>
-						<li class="active"><a href="project-vending-machines.html">Наші вендінгові автомати</a></li>
-						<li><a href="project-get-card.html">Як отримати картку або браслет</a></li>
-						<li><a href="project-card-refill.html">Як поповнити картку або браслет</a></li>
-						<li><a href="project-how-to-use-vending-machine.html">Як користуватися вендінговим автоматов</a></li>
+						<li><a href="suppliers.html">Наші виробники</a></li>
+						<li><a href="suppliers-biskvit-shokolad.html">Бісквіт-шоколад</a></li>
+						<li><a href="suppliers-solodkiy-svit.html">Солодкий світ</a></li>
+						<li><a href="suppliers-econia.html">Еконія</a></li>
+						<li><a href="suppliers-sergio.html">Серджіо</a></li>
+						<li><a href="suppliers-kvartet.html">Квартет</a></li>
+						<li><a href="suppliers-ramonka.html">Рамонка</a></li>
+						<li class="active"><a href="suppliers-vitmark.html">Вітмарк-Україна</a></li>
+						<li><a href="suppliers-cherkasu-hlib.html">Черкасихліб</a></li>
 					</ul>
 				</aside>
-				<section id="content-info-holder" class="advantage">
-					<h2>Обслуговування автоматів</h2>
+				<section id="content-info-holder" class="supplier-inside">
+					<h1>Вітмарк-Україна</h1>
 					<span class="separator-horizontal"></span>
-					<p>Ми надаємо повний технічний супровід. Обслуговування включає: поповнення автомату високоякісною продукцією та перевірку справної роботи конструкції.</p>
-					<p>Наша технічні група гарантує мінімальний час очікування реакції спеціалістів у разі виникнення проблем з роботою автомату.</p>
-					<h2>Санітарне обслуговування</h2>
-					<span class="separator-horizontal"></span>
-					<p>Будь-який, навіть віддалено розташований апарат, обслуговується спеціалістом не менше 2-х разів у місяць. Постійне піклування про відповідність автоматів санітарним стандартам є гарантією високої якості продукції та безпеки для кожного клієнта.</p>
-					<h2>Технічне обслуговування</h2>
-					<span class="separator-horizontal"></span>
-					<p>Наша команда висококваліфікованих професійних техніків має необхідний набор інструментів та запасних деталей, що дозволяє виявити та усунути технічні проблеми швидко та ефективно. Уся процедура з обслуговування проводяться на місці, що гарантує високий рівень підтримки наших вендінгових автоматів.</p>
-					<p>Технічна підтримка знаходиться на відстані дзвінка. Кожного разу, коли виникає потреба у технічному обслуговуванні, наш кол-центр приймає виклик, а технічний відділ виїздить до вас. У результаті ретельного моніторингу та відслідковування вхідних дзвінків, ми підтримуємо високий рівень технічного обслуговування.</p>
-					<p>Ми проводимо регулярне навчання наших співробітників з ціллю забезпечення швидкої та ефективної підтримки торговельних автоматів.</p>
-					<h2>Контроль якості продукції</h2>
-					<span class="separator-horizontal"></span>
-					<p>Ми проводимо постійні опитування серед батьків та учнів, цікавлячись рівнем їх задоволення нашими послугами. Зворотній зв’язок допомагає нам знати, що думають люди, роблячи інформацію основою для подальшого вдосконалення системи.</p>
+					<figure>
+						<img src="build/images/suppliers/vitmark.png" alt="Вітмарк-Україна">
+					</figure>
+					<p>Компанія Вітмарк-Україна посідає провідні позиції на українському ринку соків та напоїв, а також на ринку дитячого харчування у сегменті фруктово-овочевих соків та пюре. За підсумками 2014-го року частка компанії на ринку склала близько 28%.</p>
+					<p>У портфелі компанії широкий асортимент продукції – соки Jaffa, вода Aquarte, сім`я брендів від Одеського заводу дитячого харчування – Наш сік, соки прямого віджиму Прямосік, смузі Просто Фрукти, дитяче харчування Чудо-чадо. Лідерство компанії обумовлено високою якістю продукції, натуральністю та доступністю завдяки власній переробці українських фруктів та овочей, а також співробітництву  з провідними світовими постачальниками. Продукція компанії експортується у більш ніж 20 країн світу. Головний офіс компанії знаходиться в Одесі.</p>
+					<p>За 20-річну історію компанії Вітмарк-Україна її продукція отримала визнання багатьох авторитетних міжнародних конкурсів та рейтингів популярності брендів, але головне – це визнання споживачів.</p>
+					<p>Протягом останніх 15-ти років, продукція Вітмарк-Україна вдало експортувалась у країни СНД, Європи, а також у США, Канаду, Ізраїль. У 2013 році компанія пройшла сертифікацію на відповідність вимогам міжнародних стандартів менеджмента якості ISO 9001:2008 і системи менеджмента безпеки харчової продукції ISO 22000:2005.</p>
 				</section>
 			</div>
 			<section class="pre-footer">
@@ -206,7 +203,7 @@
 	<script src="jspm_packages/system.js"></script>
 	<script src="jspm.config.js"></script>
 	<script>
-		System.import("assets/js/app/project");
+		System.import("assets/js/app/suppliers");
 	</script>
 	<script>
 		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
