--- a/suppliers.html
+++ b/suppliers.html
@@ -88,15 +88,15 @@
 			<div class="outer inside">
 				<aside id="navigation-holder">
 					<ul>
-						<li class="active"><a href="#">Наші виробники</a></li>
-						<li><a href="#">Бісквіт-шоколад</a></li>
-						<li><a href="#">Солодкий світ</a></li>
-						<li><a href="#">Еконія</a></li>
-						<li><a href="#">Серджіо</a></li>
-						<li><a href="#">Квартет</a></li>
-						<li><a href="#">Рамонка</a></li>
-						<li><a href="#">Вітмарк-Україна</a></li>
-						<li><a href="#">Черкасихліб</a></li>
+						<li class="active"><a href="suppliers.html">Наші виробники</a></li>
+						<li><a href="suppliers-biskvit-shokolad.html">Бісквіт-шоколад</a></li>
+						<li><a href="suppliers-solodkiy-svit.html">Солодкий світ</a></li>
+						<li><a href="suppliers-econia.html">Еконія</a></li>
+						<li><a href="suppliers-sergio.html">Серджіо</a></li>
+						<li><a href="suppliers-kvartet.html">Квартет</a></li>
+						<li><a href="suppliers-ramonka.html">Рамонка</a></li>
+						<li><a href="suppliers-vitmark.html">Вітмарк-Україна</a></li>
+						<li><a href="suppliers-cherkasu-hlib.html">Черкасихліб</a></li>
 					</ul>
 				</aside>
 				<section id="content-info-holder">
@@ -113,7 +113,7 @@
 									<p>Початком промислового виробництва кондитерських виробів в місті Харкові вважається 1896 рік, коли було засновано кондитерську фабрику Жоржа Бормана - видатного кондитера</p>
 								</div>
 								<div class="btn-more">
-									<a href="#">
+									<a href="suppliers-biskvit-shokolad.html">
 										дізнатися більше
 									</a>
 								</div>
@@ -127,7 +127,7 @@
 									<p>Кондитерська фабрика «СОЛОДКИЙ СВІТ» - великий український виробник, лідер у ніші виготовлення натуральних солодощів.</p>
 								</div>
 								<div class="btn-more">
-									<a href="#">
+									<a href="suppliers-solodkiy-svit.html">
 										дізнатися більше
 									</a>
 								</div>
@@ -138,10 +138,10 @@
 								</figure>
 								<h2>Еконія</h2>
 								<div class="info">
-									<p>Історія компанії починається в 2001 році, коли було запущене перше місцеве виробництво спеціалізованиї води для дітей від 1 до 6 років в Україні</p>
+									<p>Історія компанії починається в 2001 році, коли було запущене перше місцеве виробництво спеціалізованиї води для дітей від 1 місяця до 6 років в Україні</p>
 								</div>
 								<div class="btn-more">
-									<a href="#">
+									<a href="suppliers-econia.html">
 										дізнатися більше
 									</a>
 								</div>
@@ -154,10 +154,10 @@
 								</figure>
 								<h2>Серджіо</h2>
 								<div class="info">
-									<p>Компанія SERGIO (товариство з обмеженою відповідальністю) була створена в 2010 році</p>
+									<p>Компанія "Серджио" робить якісні сухофрукти TM SERGIО. Мета компанії - виробництво тільки високоякісної натуральної продукції для дітей.</p>
 								</div>
 								<div class="btn-more">
-									<a href="#">
+									<a href="suppliers-sergio.html">
 										дізнатися більше
 									</a>
 								</div>
@@ -168,10 +168,10 @@
 								</figure>
 								<h2>Квартет</h2>
 								<div class="info">
-									<p>На початку компанія займалася виключно виготовленнямхудожніх тортів, але потім, в результаті експериментів, сформувався окремий напрям - виготовлення авторських імбирних пряників під власним брендом.</p>
+									<p>Компанія займалася виключно виготовленням художніх тортів, але потім, сформувався окремий напрям - виготовлення авторських імбирних пряників.</p>
 								</div>
 								<div class="btn-more">
-									<a href="#">
+									<a href="suppliers-kvartet.html">
 										дізнатися більше
 									</a>
 								</div>
@@ -182,10 +182,10 @@
 								</figure>
 								<h2>Рамонка</h2>
 								<div class="info">
-									<p>Компанія « Арсенал- Пак » працює на ринку України з 2003 року як український виробник кондитерських виробів і продуктів снекової групи</p>
+									<p>Компанія «Арсенал - Пак» працює на ринку України з 2003 року як український виробник кондитерських виробів і продуктів снекової групи</p>
 								</div>
 								<div class="btn-more">
-									<a href="#">
+									<a href="suppliers-ramonka.html">
 										дізнатися більше
 									</a>
 								</div>
@@ -198,10 +198,10 @@
 								</figure>
 								<h2>Вітмарк-Україна</h2>
 								<div class="info">
-									<p>Компанія Вітмарк-Україна посідає провідні позиції на українському ринку соків та напоїв, а також на ринку дитячого харчування у сегменті фруктово-овочевих соків та пюре.</p>
+									<p>Компанія Вітмарк-Україна посідає провідні позиції на українському ринку соків та напоїв, а також на ринку дитячого харчування</p>
 								</div>
 								<div class="btn-more">
-									<a href="#">
+									<a href="suppliers-vitmark.html">
 										дізнатися більше
 									</a>
 								</div>
@@ -212,10 +212,10 @@
 								</figure>
 								<h2>Черкасихліб</h2>
 								<div class="info">
-									<p>Історія підприємства починається у 1932 році. На сьогодні підприємство займає третє місце в Україні за обсягами виробництва хлібобулочних виробів і є лідером по впровадженню нових технологічних ліній та процесів.</p>
+									<p>Підприємство займається виробництвом хлібобулочних виробів і є лідером по впровадженню нових технологічних ліній та процесів</p>
 								</div>
 								<div class="btn-more">
-									<a href="#">
+									<a href="suppliers-cherkasu-hlib.html">
 										дізнатися більше
 									</a>
 								</div>
