--- a/suppliers-cherkasu-hlib.html
+++ b/suppliers-cherkasu-hlib.html
@@ -33,7 +33,7 @@
 	<link rel="icon" type="image/png" href="assets/images/favicons/96x96.png">
 	<link rel="icon" type="image/png" href="assets/images/favicons/160x160.png">
 	<link rel="icon" type="image/png" href="assets/images/favicons/192x192.png"-->
-	<link rel="stylesheet" href="build/css/project.bundle.min.css">
+	<link rel="stylesheet" href="build/css/suppliers.bundle.min.css">
 </head>
 <body>
 	<div id="page">
@@ -76,8 +76,8 @@
 						<ul>
 							<li><a href="index.html">Головна</a></li>
 							<li><a href="about.html">Про компанію</a></li>
-							<li class="active"><a href="project.html">Наш проект</a></li>
-							<li><a href="suppliers.html">Виробники</a></li>
+							<li><a href="project.html">Наш проект</a></li>
+							<li class="active"><a href="suppliers.html">Виробники</a></li>
 							<li><a href="contacts.html">Контакти</a></li>
 						</ul>
 					</nav>
@@ -88,30 +88,26 @@
 			<div class="outer inside">
 				<aside id="navigation-holder">
 					<ul>
-						<li><a href="project.html">Наш проект</a></li>
-						<li><a href="project-advantage.html">Переваги проекту</a></li>
-						<li class="active"><a href="project-vending-machines.html">Наші вендінгові автомати</a></li>
-						<li><a href="project-get-card.html">Як отримати картку або браслет</a></li>
-						<li><a href="project-card-refill.html">Як поповнити картку або браслет</a></li>
-						<li><a href="project-how-to-use-vending-machine.html">Як користуватися вендінговим автоматов</a></li>
+						<li><a href="suppliers.html">Наші виробники</a></li>
+						<li><a href="suppliers-biskvit-shokolad.html">Бісквіт-шоколад</a></li>
+						<li><a href="suppliers-solodkiy-svit.html">Солодкий світ</a></li>
+						<li><a href="suppliers-econia.html">Еконія</a></li>
+						<li><a href="suppliers-sergio.html">Серджіо</a></li>
+						<li><a href="suppliers-kvartet.html">Квартет</a></li>
+						<li><a href="suppliers-ramonka.html">Рамонка</a></li>
+						<li><a href="suppliers-vitmark.html">Вітмарк-Україна</a></li>
+						<li class="active"><a href="suppliers-cherkasu-hlib.html">Черкасихліб</a></li>
 					</ul>
 				</aside>
-				<section id="content-info-holder" class="advantage">
-					<h2>Обслуговування автоматів</h2>
+				<section id="content-info-holder" class="supplier-inside">
+					<h1>Черкасихліб</h1>
 					<span class="separator-horizontal"></span>
-					<p>Ми надаємо повний технічний супровід. Обслуговування включає: поповнення автомату високоякісною продукцією та перевірку справної роботи конструкції.</p>
-					<p>Наша технічні група гарантує мінімальний час очікування реакції спеціалістів у разі виникнення проблем з роботою автомату.</p>
-					<h2>Санітарне обслуговування</h2>
-					<span class="separator-horizontal"></span>
-					<p>Будь-який, навіть віддалено розташований апарат, обслуговується спеціалістом не менше 2-х разів у місяць. Постійне піклування про відповідність автоматів санітарним стандартам є гарантією високої якості продукції та безпеки для кожного клієнта.</p>
-					<h2>Технічне обслуговування</h2>
-					<span class="separator-horizontal"></span>
-					<p>Наша команда висококваліфікованих професійних техніків має необхідний набор інструментів та запасних деталей, що дозволяє виявити та усунути технічні проблеми швидко та ефективно. Уся процедура з обслуговування проводяться на місці, що гарантує високий рівень підтримки наших вендінгових автоматів.</p>
-					<p>Технічна підтримка знаходиться на відстані дзвінка. Кожного разу, коли виникає потреба у технічному обслуговуванні, наш кол-центр приймає виклик, а технічний відділ виїздить до вас. У результаті ретельного моніторингу та відслідковування вхідних дзвінків, ми підтримуємо високий рівень технічного обслуговування.</p>
-					<p>Ми проводимо регулярне навчання наших співробітників з ціллю забезпечення швидкої та ефективної підтримки торговельних автоматів.</p>
-					<h2>Контроль якості продукції</h2>
-					<span class="separator-horizontal"></span>
-					<p>Ми проводимо постійні опитування серед батьків та учнів, цікавлячись рівнем їх задоволення нашими послугами. Зворотній зв’язок допомагає нам знати, що думають люди, роблячи інформацію основою для подальшого вдосконалення системи.</p>
+					<figure>
+						<img src="build/images/suppliers/cherkasy-hlib.png" alt="Черкасихліб">
+					</figure>
+					<p>Історія підприємства починається у 1932 році. На сьогодні підприємство займає третє місце в Україні за обсягами виробництва хлібобулочних виробів і є лідером по впровадженню нових технологічних ліній та процесів.</p>
+					<p>Підприємство виробляє 270 найменувань хлібобулочної та кондитерської продукції. Середньомісячний обсяг виробництва - 4,5 тис. Т. Домінуючу позицію в асортименті займає хліб - 75%, булочні і здобні вироби - 20,1%, кондитерські вироби - 2,1%, сухарі - 1,1%, соломка - 1, 8%, бубличні вироби - 0,2%.</p>
+					<p>З метою зміцнення конкурентної позиції на ринку, а також підвищення якості продукції, з 2010 року на підприємстві впроваджується система управління безпекою харчових продуктів відповідно до стандарту ГОСТ 4161-2003.</p>
 				</section>
 			</div>
 			<section class="pre-footer">
@@ -206,7 +202,7 @@
 	<script src="jspm_packages/system.js"></script>
 	<script src="jspm.config.js"></script>
 	<script>
-		System.import("assets/js/app/project");
+		System.import("assets/js/app/suppliers");
 	</script>
 	<script>
 		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
