--- a/suppliers-sergio.html
+++ b/suppliers-sergio.html
@@ -33,7 +33,7 @@
 	<link rel="icon" type="image/png" href="assets/images/favicons/96x96.png">
 	<link rel="icon" type="image/png" href="assets/images/favicons/160x160.png">
 	<link rel="icon" type="image/png" href="assets/images/favicons/192x192.png"-->
-	<link rel="stylesheet" href="build/css/project.bundle.min.css">
+	<link rel="stylesheet" href="build/css/suppliers.bundle.min.css">
 </head>
 <body>
 	<div id="page">
@@ -76,8 +76,8 @@
 						<ul>
 							<li><a href="index.html">Головна</a></li>
 							<li><a href="about.html">Про компанію</a></li>
-							<li class="active"><a href="project.html">Наш проект</a></li>
-							<li><a href="suppliers.html">Виробники</a></li>
+							<li><a href="project.html">Наш проект</a></li>
+							<li class="active"><a href="suppliers.html">Виробники</a></li>
 							<li><a href="contacts.html">Контакти</a></li>
 						</ul>
 					</nav>
@@ -88,30 +88,26 @@
 			<div class="outer inside">
 				<aside id="navigation-holder">
 					<ul>
-						<li><a href="project.html">Наш проект</a></li>
-						<li><a href="project-advantage.html">Переваги проекту</a></li>
-						<li class="active"><a href="project-vending-machines.html">Наші вендінгові автомати</a></li>
-						<li><a href="project-get-card.html">Як отримати картку або браслет</a></li>
-						<li><a href="project-card-refill.html">Як поповнити картку або браслет</a></li>
-						<li><a href="project-how-to-use-vending-machine.html">Як користуватися вендінговим автоматов</a></li>
+						<li><a href="suppliers.html">Наші виробники</a></li>
+						<li><a href="suppliers-biskvit-shokolad.html">Бісквіт-шоколад</a></li>
+						<li><a href="suppliers-solodkiy-svit.html">Солодкий світ</a></li>
+						<li><a href="suppliers-econia.html">Еконія</a></li>
+						<li class="active"><a href="suppliers-sergio.html">Серджіо</a></li>
+						<li><a href="suppliers-kvartet.html">Квартет</a></li>
+						<li><a href="suppliers-ramonka.html">Рамонка</a></li>
+						<li><a href="suppliers-vitmark.html">Вітмарк-Україна</a></li>
+						<li><a href="suppliers-cherkasu-hlib.html">Черкасихліб</a></li>
 					</ul>
 				</aside>
-				<section id="content-info-holder" class="advantage">
-					<h2>Обслуговування автоматів</h2>
+				<section id="content-info-holder" class="supplier-inside">
+					<h1>Серджіо</h1>
 					<span class="separator-horizontal"></span>
-					<p>Ми надаємо повний технічний супровід. Обслуговування включає: поповнення автомату високоякісною продукцією та перевірку справної роботи конструкції.</p>
-					<p>Наша технічні група гарантує мінімальний час очікування реакції спеціалістів у разі виникнення проблем з роботою автомату.</p>
-					<h2>Санітарне обслуговування</h2>
-					<span class="separator-horizontal"></span>
-					<p>Будь-який, навіть віддалено розташований апарат, обслуговується спеціалістом не менше 2-х разів у місяць. Постійне піклування про відповідність автоматів санітарним стандартам є гарантією високої якості продукції та безпеки для кожного клієнта.</p>
-					<h2>Технічне обслуговування</h2>
-					<span class="separator-horizontal"></span>
-					<p>Наша команда висококваліфікованих професійних техніків має необхідний набор інструментів та запасних деталей, що дозволяє виявити та усунути технічні проблеми швидко та ефективно. Уся процедура з обслуговування проводяться на місці, що гарантує високий рівень підтримки наших вендінгових автоматів.</p>
-					<p>Технічна підтримка знаходиться на відстані дзвінка. Кожного разу, коли виникає потреба у технічному обслуговуванні, наш кол-центр приймає виклик, а технічний відділ виїздить до вас. У результаті ретельного моніторингу та відслідковування вхідних дзвінків, ми підтримуємо високий рівень технічного обслуговування.</p>
-					<p>Ми проводимо регулярне навчання наших співробітників з ціллю забезпечення швидкої та ефективної підтримки торговельних автоматів.</p>
-					<h2>Контроль якості продукції</h2>
-					<span class="separator-horizontal"></span>
-					<p>Ми проводимо постійні опитування серед батьків та учнів, цікавлячись рівнем їх задоволення нашими послугами. Зворотній зв’язок допомагає нам знати, що думають люди, роблячи інформацію основою для подальшого вдосконалення системи.</p>
+					<figure>
+						<img src="build/images/suppliers/sergio.png" alt="Серджіо">
+					</figure>
+					<p>Компанія SERGIO (товариство з обмеженою відповідальністю) була створена в 2010 році.</p>
+					<p>Виробництво тільки високоякісної натуральної продукції за технологією, яка дозволяє зберегти всі мінеральні речовини без додавання консервантів, жирів і цукру, для того, щоб захистити, оздоровити і зробити кожен день в житті наших дітей повним радості і фарб!</p>
+					<p>Компанія "Серджио" робить якісні сухофрукти TM SERGIО.Мета компанії - виробництво тільки високоякісної натуральної продукції за технологією, яка дозволяє зберегти усі вітаміни і мінеральні речовини без додавання консервантів, жирів і цукру.  Великий асортимент вироблюваної продукції включає фасовані сушені ягоди, фрукти, овочі для кінцевого споживача, а так само масова сушена продукція для підприємств громадського харчування і фармацевтичних компаній. Для виробництва на підприємстві використовується сировиннабаза з екологічно чистих районів України.</p>
 				</section>
 			</div>
 			<section class="pre-footer">
@@ -206,7 +202,7 @@
 	<script src="jspm_packages/system.js"></script>
 	<script src="jspm.config.js"></script>
 	<script>
-		System.import("assets/js/app/project");
+		System.import("assets/js/app/suppliers");
 	</script>
 	<script>
 		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
